--- a/css/xb.css
+++ b/css/xb.css
@@ -443,6 +443,11 @@ img {
 .xb-round-50 {
 	border-radius: 50%;
 }
+.xb-img-round-30 {
+	width: 30px;
+	height: 30px;
+	border-radius: 50%;
+}
 .xb-img-round-50 {
 	width: 50px;
 	height: 50px;
